# MPSEMI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  ci.yml
cpp/: CMakeLists.txt  mpsemi_engine.cpp  mpsemi_notifier.cpp  mpsemi_notifier.h
rust/: Cargo.toml
rust/src/: lib.rs
share/addon/: mpsemi-addon.conf
share/inputmethod/: mpsemi.conf
